apps/homelab/linkding/linkding.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
spec:
  template:
    spec:
      containers:
        - name: linkding
