apps/homelab/linkding/linkding-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: linkding
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`linkding.local`)
      kind: Rule
      services:
        - name: linkding
          port: 9090
  tls:
    secretName: local-lan-tls
